[gd_scene load_steps=12 format=3 uid="uid://c5qk0efxq3ctm"]

[ext_resource type="Script" path="res://springblaster.gd" id="1_c3o0l"]
[ext_resource type="Texture2D" uid="uid://bmayovrbd20te" path="res://assets/images/springblaster.png" id="1_emhv5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1m1wn"]
size = Vector2(16, 5)

[sub_resource type="Animation" id="Animation_ijq27"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_cm27u"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.1, 0.166667, 0.233333, 0.3, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7, 6, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1875, 0.625)]
}

[sub_resource type="Animation" id="Animation_3sg3x"]
resource_name = "idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 3), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fk5to"]
resource_name = "jump"
length = 0.18
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_r2fal"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.28687),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcl76"]
_data = {
"RESET": SubResource("Animation_ijq27"),
"die": SubResource("Animation_cm27u"),
"idle": SubResource("Animation_3sg3x"),
"jump": SubResource("Animation_fk5to"),
"shoot": SubResource("Animation_r2fal")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j224v"]
size = Vector2(16, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k87gc"]
size = Vector2(16, 11)

[node name="springblaster" type="CharacterBody2D"]
script = ExtResource("1_c3o0l")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_emhv5")
hframes = 10
frame = 1

[node name="ShootingTimer" type="Timer" parent="."]
autostart = true

[node name="kill" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_1m1wn")

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lcl76")
}

[node name="GunPoint" type="Marker2D" parent="."]
position = Vector2(-12, 7)

[node name="collition" type="CollisionShape2D" parent="."]
position = Vector2(0, 14.5)
shape = SubResource("RectangleShape2D_j224v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_k87gc")

[node name="GroundCheck" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(0, 14)

[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
[connection signal="body_entered" from="kill" to="." method="_on_hitbox_body_entered"]
[connection signal="animation_finished" from="animator" to="." method="_on_animator_animation_finished"]
